# astro-format-rs

./: Cargo.toml  README.md
src/: arrays.rs  lib.rs  string.rs
src/string/: decode.rs  encode.rs
