[package]
name = "astro-format"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "Astro Format is a library for efficiently transcoding arrays into a single buffer and native rust types into hexadecimal strings."
repository = "https://github.com/stelar-labs/rust-astro-format"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
