[package]
name = "astro-format"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Astro Format is a library for transcoding between multiple arrays and a single buffer."
repository = "https://github.com/stelar-labs/astro-format-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
