[package]
name = "astro-format"
version = "2.1.1"
edition = "2021"
license = "MIT"
description = "Astro Format is a library for transcoding between an array of implemented types and a single buffer."
repository = "https://github.com/stelar-labs/astro-format-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
